feat: extend plugin config pre-parser to support repositories and map-form entries
Phase 21 Step 3: introduces PluginConfigParseResult and a new parse(Path)
method that recognises the repositories: section and accepts both string and
map-form plugin entries (with optional repository ref) so future steps can
route resolution through the appropriate repository.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>